--- a/package.json
+++ b/package.json
@@ -4,22 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server"
+    "start": "NODE_ENV=development webpack-dev-server --port 8086"
   },
   "author": "qinchao@lianjia.com",
   "license": "ISC",
   "dependencies": {
+    "element-ui": "^1.2.8",
     "vue": "^2.2.6"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
+    "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "cross-env": "^3.2.3",
     "css-loader": "^0.28.0",
     "file-loader": "^0.10.1",
-    "sass": "^0.5.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
     "node-sass": "^4.5.2",
+    "postcss-loader": "^1.3.3",
+    "sass": "^0.5.0",
     "sass-loader": "^6.0.3",
     "scss-loader": "0.0.1",
     "style-loader": "^0.16.1",
