--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server --port 8086"
+    "start": "NODE_ENV=development webpack-dev-server --port 8086",
+    "gulp": "node_modules/gulp/bin/gulp.js"
   },
   "author": "qinchao@lianjia.com",
   "license": "ISC",
@@ -35,6 +36,8 @@
     "vue-style-loader": "^2.0.3",
     "vue-template-compiler": "^2.2.6",
     "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.2"
+    "webpack-dev-server": "^2.4.2",
+    "gulp": "~3.9.1",
+    "gulp-replace-assets": "~0.0.4"
   }
 }
