--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server --port 8086",
+    "start": "NODE_ENV=development webpack-dev-server --hot --watch --inline --port 8086",
+    "build": "NODE_ENV=production webpack",
     "gulp": "node_modules/gulp/bin/gulp.js"
   },
   "author": "qinchao@lianjia.com",
   "license": "ISC",
   "dependencies": {
-    "element-ui": "^1.2.8",
+    "element-ui": "^1.3.2",
     "vue": "^2.2.6"
   },
   "devDependencies": {
@@ -18,12 +19,16 @@
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^3.2.3",
     "css-loader": "^0.28.0",
     "file-loader": "^0.10.1",
+    "gulp": "~3.9.1",
+    "gulp-replace-assets": "~0.0.4",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
+    "loader-utils": "^1.1.0",
     "node-sass": "^4.5.2",
     "postcss-loader": "^1.3.3",
     "sass": "^0.5.0",
@@ -36,8 +41,6 @@
     "vue-style-loader": "^2.0.3",
     "vue-template-compiler": "^2.2.6",
     "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.2",
-    "gulp": "~3.9.1",
-    "gulp-replace-assets": "~0.0.4"
+    "webpack-dev-server": "^2.4.2"
   }
 }
