--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server --hot --watch --inline --port 8086",
     "build": "NODE_ENV=production webpack",
-    "gulp": "node_modules/gulp/bin/gulp.js"
+    "dev": "node_modules/gulp/bin/gulp.js"
   },
   "author": "qinchao@lianjia.com",
   "license": "ISC",
@@ -42,6 +42,7 @@
     "vue-style-loader": "^2.0.3",
     "vue-template-compiler": "^2.2.6",
     "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.4.2"
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-server": "^2.4.5"
   }
 }
